[package]
name = "typed-sled"
version = "0.1.0"
edition = "2024"
authors = ["Bibek Pandey <bibek@alpenlabs.io>"]
description = "A type-safe wrapper around the sled embedded database"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/alpenlabs/typed-sled"
categories = ["database", "embedded"]
keywords = ["database", "sled", "embedded", "key-value", "type-safe"]

[lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(coverage, coverage_nightly)',
] }
rust.missing_docs = "warn"
rustdoc.all = "warn"
clippy.too_long_first_doc_paragraph = "warn"

[features]

[dependencies]
dashmap = "6.1.0"
sled = "0.34.7"
thiserror = "1.0"

[dev-dependencies]
borsh = { version = "1.5", features = ["derive"] }

[profile.release]
opt-level = "z"   # Optimized for size, use 3 for speed
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduced to increase optimizations
panic = "abort"   # Abort on panic
strip = "symbols" # Strip symbols from binary
